# PyStockBook

./: .gitignore  Makefile  README.md  pyproject.toml  run.bat
.github/workflows/: release.yml
PyStockBook/: BankingBusiness.py  __init__.py  book.py  sdf.py  stock.py
PyStockBook/cli/: SBWindow.py  __init__.py
tests/: sample.ipynb  test_sdf.py  test_stock.py
tests/data/: STOCK_DAY_ALL.json  STOCK_DAY_AVG_ALL.json  tpex_mainboard_daily_close_quotes.json  tpex_mainboard_quotes.json
