[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
PyStockBook = "PyStockBook.cli:main"

[project]
name = "PyStockBook"
authors = [{name = "ypochien", email = "ypochien@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
platforms = ["win32","win64"]
dynamic = ["version", "description"]
dependencies = [
    "loguru",
    "pywin32",
    "StrEnum",
    "polars",
    "adodbapi",
    "requests",
    "ujson",
]
requires-python = ">3.6,<3.11"

[project.optional-dependencies]
gui = [
    "PySide6",
]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
]